feat: 정산기능 추가

--- a/.env.production
+++ b/.env.production
@@ -13,4 +13,9 @@ NEXT_PUBLIC_MEASUREMENT_ID=YOUR_FIREBASE_MEASUREMENT_ID
 # Twitter
 TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAEM%2FoAEAAAAASSO4bEwaG20ht6eFEoHWjshf3IE%3DLoUlpAjUAtBV2NEKtIqU4zFPrecutRXGIhZN0A7M4GsBXeP8CK
 
+# KaKao
+KAKAO_CLIENT_ID=5f300d78b2943e63a335ef8e2c426db0
+KAKAO_CLIENT_SECRET=bungsin-client
+
+# Open AI
 OPENAI_API_KEY=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
