--- a/package.json
+++ b/package.json
@@ -25,18 +25,21 @@
     "framer-motion": "^7.2.1",
     "i18next": "^22.4.13",
     "next": "12.2.6",
-    "openai": "^3.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hot-toast": "^2.3.0",
+    "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
+    "openai": "^3.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.3.0",
     "react-i18next": "^12.2.0",
     "react-markdown": "^8.0.5",
+    "react-spreadsheet": "^0.8.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.3.4",
     "rehype-mathjax": "^4.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "scheduler": "^0.23.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
