--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "12.2.6",
     "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
+    "nprogress": "^0.2.0",
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -47,6 +48,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "18.6.4",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.16",
     "@types/react-dom": "18.0.6",
     "@types/react-syntax-highlighter": "^15.5.7",
