refactor cors config

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,24 @@
       "src": "/api/chat",
       "methods": ["GET", "POST"]
     }
+  ],
+  "headers": [
+    {
+      "source": "/api/chat",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "X-Requested-With"
+        }
+      ]
+    }
   ]
 }
