--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "routes": [
     {
       "src": "/api/chat",
-      "methods": ["GET", "POST"]
+      "methods": ["POST"]
     }
   ],
   "headers": [
@@ -12,14 +12,6 @@
         {
           "key": "Access-Control-Allow-Origin",
           "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "X-Requested-With"
         }
       ]
     }
