--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
     "@tabler/icons-react": "^2.22.0",
+    "@vercel/analytics": "^1.0.1",
     "clsx": "^1.2.1",
     "eventsource-parser": "^1.0.0",
     "firebase": "^9.9.4",
