--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroicons/react": "^2.0.11",
     "@tabler/icons-react": "^2.22.0",
     "@vercel/analytics": "^1.0.1",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "eventsource-parser": "^1.0.0",
     "firebase": "^9.9.4",
