config vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,10 @@
 {
-  "rewrites": [
+  "version": 2,
+  "routes": [
     {
-      "source": "/api/aichat",
-      "destination": "/api/aichat.ts"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/api/aichat",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        }
-      ]
+      "src": "/api/aichat",
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
+      "dest": "/api/aichat"
     }
   ]
 }
