--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,5 @@
 {
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "project": "tsconfig.json"
-  },
-  "plugins": ["@typescript-eslint"],
-  "extends": [
-    "next"
-  ],
-  "settings": {
-    "import/resolver": {
-      "typescript": true,
-      "node": true
-    }
-  },
+  "extends": "next",
   "rules": {
     "react/no-unescaped-entities": "off",
     "@next/next/no-page-custom-font": "off"
