--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "next": "12.2.6",
     "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
+    "react-i18next": "^12.2.0",
     "nprogress": "^0.2.0",
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
-    "react-i18next": "^12.2.0",
     "react-markdown": "^8.0.5",
     "react-spreadsheet": "^0.8.3",
     "react-syntax-highlighter": "^15.5.0",
@@ -49,7 +49,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/node": "18.6.4",
+    "@types/node": "^20.3.2",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.16",
     "@types/react-dom": "18.0.6",
@@ -70,7 +70,7 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "sass": "^1.54.4",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.7.4"
+    "typescript": "^5.1.6"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
