--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # Dev URL
-NEXT_PUBLIC_URL=http://localhost
+NEXT_PUBLIC_URL=http://localhost:3000
 
 # Firebase
 NEXT_PUBLIC_API_KEY=AIzaSyBcZ7t0Ypsh-Lgp8zT0lor062N_FbpsXYo
