--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "cors": "^2.8.5",
     "eventsource-parser": "^1.0.0",
     "firebase": "^9.9.4",
     "framer-motion": "^7.2.1",
@@ -29,12 +30,12 @@
     "next": "12.2.6",
     "next-auth": "^4.22.1",
     "next-i18next": "^13.2.2",
-    "react-i18next": "^12.2.0",
     "nprogress": "^0.2.0",
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
+    "react-i18next": "^12.2.0",
     "react-markdown": "^8.0.5",
     "react-spreadsheet": "^0.8.3",
     "react-syntax-highlighter": "^15.5.0",
@@ -49,6 +50,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/cors": "^2.8.13",
     "@types/node": "^20.3.2",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.16",
