--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,11 @@
       "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
       "dest": "/api/aichat"
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/aichat",
+      "destination": "/api/aichat"
+    }
   ]
 }
