--- a/.env.development
+++ b/.env.development
@@ -20,3 +20,5 @@ KAKAO_CLIENT_SECRET=Q5vZcsKDBHVSPOnmMk3jcukWaBXaTfwn
 # Open AI
 OPENAI_API_KEY=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
 
+# vercel
+VERCEL_PROJECT_ID=prj_AfMchH6UgJhZhLBDiKjkNZbx7hPA
