--- a/.env.production
+++ b/.env.production
@@ -19,3 +19,6 @@ KAKAO_CLIENT_SECRET=bungsin-client
 
 # Open AI
 OPENAI_API_KEY=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
+
+# vercel
+VERCEL_PROJECT_ID=prj_AfMchH6UgJhZhLBDiKjkNZbx7hPA
