--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroicons/react": "^2.0.11",
     "@tabler/icons-react": "^2.22.0",
     "@vercel/analytics": "^1.0.1",
+    "@vercel/node": "^2.15.3",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "cors": "^2.8.5",
