--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "eventsource-parser": "^1.0.0",
     "firebase": "^9.9.4",
+    "firebase-tools": "^12.4.2",
     "framer-motion": "^7.2.1",
     "i18next": "^22.4.13",
     "next": "latest",
