--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next-i18next": "^13.2.2",
     "nprogress": "^0.2.0",
     "openai": "^3.2.1",
+    "protobufjs": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
