--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # Dev URL
-NEXT_PUBLIC_URL=https://todaysmeet.vercel.app
+NEXT_PUBLIC_URL=https://main.d2wlp22p2vi4yu.amplifyapp.com
 
 # Firebase
 NEXT_PUBLIC_API_KEY=AIzaSyBcZ7t0Ypsh-Lgp8zT0lor062N_FbpsXYo
