--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "scheduler": "^0.23.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "tailwind-scrollbar": "^3.0.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
