feat: /messages firestore -> realtimedatabase

--- a/.env.development
+++ b/.env.development
@@ -9,6 +9,7 @@ NEXT_PUBLIC_STORAGE_BUCKET=gs://bungsin-6e5d8.appspot.com
 NEXT_PUBLIC_MESSAGING_SENDER_ID=1008574918904
 NEXT_PUBLIC_APP_ID=bungsin-6e5d8
 NEXT_PUBLIC_MEASUREMENT_ID=YOUR_FIREBASE_MEASUREMENT_ID
+NEXT_PUBLIC_DATABASE_URL=https://bungsin-6e5d8-default-rtdb.asia-southeast1.firebasedatabase.app
 
 # Twitter
 TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAEM%2FoAEAAAAASSO4bEwaG20ht6eFEoHWjshf3IE%3DLoUlpAjUAtBV2NEKtIqU4zFPrecutRXGIhZN0A7M4GsBXeP8CK
