--- a/.env.development
+++ b/.env.development
@@ -10,7 +10,9 @@ NEXT_PUBLIC_MESSAGING_SENDER_ID=1008574918904
 NEXT_PUBLIC_APP_ID=bungsin-6e5d8
 NEXT_PUBLIC_MEASUREMENT_ID=YOUR_FIREBASE_MEASUREMENT_ID
 NEXT_PUBLIC_DATABASE_URL=https://bungsin-6e5d8-default-rtdb.asia-southeast1.firebasedatabase.app
-
+# KaKao
+NEXT_PUBLIC_KAKAO_API_KEY=e0c7b3a4d8ed96f7d3c721a1517223e8
+NEXT_PUBLIC_KAKAO_REDIRECT_URI=http://localhost:3000/kakao
 # Twitter
 TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAEM%2FoAEAAAAASSO4bEwaG20ht6eFEoHWjshf3IE%3DLoUlpAjUAtBV2NEKtIqU4zFPrecutRXGIhZN0A7M4GsBXeP8CK
 
