--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # Dev URL
-NEXT_PUBLIC_URL=https://main.d2wlp22p2vi4yu.amplifyapp.com
+NEXT_PUBLIC_URL=https://todaysmeet-phi.vercel.app
 
 # Firebase
 NEXT_PUBLIC_API_KEY=AIzaSyBcZ7t0Ypsh-Lgp8zT0lor062N_FbpsXYo
@@ -10,7 +10,9 @@ NEXT_PUBLIC_MESSAGING_SENDER_ID=1008574918904
 NEXT_PUBLIC_APP_ID=bungsin-6e5d8
 NEXT_PUBLIC_MEASUREMENT_ID=YOUR_FIREBASE_MEASUREMENT_ID
 NEXT_PUBLIC_DATABASE_URL=https://bungsin-6e5d8-default-rtdb.asia-southeast1.firebasedatabase.app
-
+# KaKao
+NEXT_PUBLIC_KAKAO_API_KEY=e0c7b3a4d8ed96f7d3c721a1517223e8
+NEXT_PUBLIC_KAKAO_REDIRECT_URI=https://todaysmeet-phi.vercel.app/kakao
 # Twitter
 TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAEM%2FoAEAAAAASSO4bEwaG20ht6eFEoHWjshf3IE%3DLoUlpAjUAtBV2NEKtIqU4zFPrecutRXGIhZN0A7M4GsBXeP8CK
 
