--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/cors": "^2.8.13",
+    "@types/kakao-js-sdk": "^1.39.1",
     "@types/node": "^20.3.2",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.16",
