--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-i18next": "^12.2.0",
     "react-kakao-login": "^2.1.1",
     "react-markdown": "^8.0.5",
+    "react-player": "^2.12.0",
     "react-spreadsheet": "^0.8.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.3.4",
@@ -49,6 +50,7 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "scheduler": "^0.23.0",
+    "swiper": "^10.0.4",
     "swr": "^1.3.0",
     "tailwind-scrollbar": "^3.0.4"
   },
