--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # Dev URL
-NEXT_PUBLIC_URL=https://todaysmeet-phi.vercel.app
+NEXT_PUBLIC_URL=https://todaysmeet.xyz
 
 # Firebase
 NEXT_PUBLIC_API_KEY=AIzaSyBcZ7t0Ypsh-Lgp8zT0lor062N_FbpsXYo
@@ -18,7 +18,7 @@ TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAEM%2FoAEAAAAASSO4bEwaG20ht6eFEoHWjshf3
 
 # KaKao
 KAKAO_CLIENT_ID=5f300d78b2943e63a335ef8e2c426db0
-KAKAO_CLIENT_SECRET=bungsin-client
+KAKAO_CLIENT_SECRET=Q5vZcsKDBHVSPOnmMk3jcukWaBXaTfwn
 
 # Open AI
 
