--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^1.2.1",
     "cors": "^2.8.5",
     "eventsource-parser": "^1.0.0",
+    "file-saver": "^2.0.5",
     "firebase": "^9.9.4",
     "firebase-tools": "^12.4.2",
     "framer-motion": "^7.2.1",
@@ -52,19 +53,22 @@
     "scheduler": "^0.23.0",
     "swiper": "^10.0.4",
     "swr": "^1.3.0",
-    "tailwind-scrollbar": "^3.0.4"
+    "tailwind-scrollbar": "^3.0.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/cors": "^2.8.13",
+    "@types/file-saver": "^2.0.5",
     "@types/kakao-js-sdk": "^1.39.1",
     "@types/node": "^20.3.2",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.16",
     "@types/react-dom": "18.0.6",
     "@types/react-syntax-highlighter": "^15.5.7",
+    "@types/xlsx": "^0.0.36",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "autoprefixer": "^10.4.8",
