--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": "./",
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "@components/*": ["components/*"],
       "@lib/*": ["lib/*"],
