feat: 정산기능추가

--- a/.env.production
+++ b/.env.production
@@ -21,6 +21,7 @@ KAKAO_CLIENT_ID=5f300d78b2943e63a335ef8e2c426db0
 KAKAO_CLIENT_SECRET=Q5vZcsKDBHVSPOnmMk3jcukWaBXaTfwn
 
 # Open AI
+#OPENAI_API_KEY=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
 
 # vercel
 VERCEL_PROJECT_ID=prj_AfMchH6UgJhZhLBDiKjkNZbx7hPA
