--- a/.env.development
+++ b/.env.development
@@ -21,6 +21,7 @@ KAKAO_CLIENT_ID=5f300d78b2943e63a335ef8e2c426db0
 KAKAO_CLIENT_SECRET=Q5vZcsKDBHVSPOnmMk3jcukWaBXaTfwn
 
 # Open AI
+OPENAI_API_KEY=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
 
 # vercel
 VERCEL_PROJECT_ID=prj_AfMchH6UgJhZhLBDiKjkNZbx7hPA
